Repeatedly adding a cylinder to a scene causes a crash #56717

Closed
opened 2018-09-07 22:04:35 +02:00 by Jay Edwards · 18 comments

System Information
Windows 10, Intel(R) Core(TM) i5-6200U CPU @ 2.30GHz, NVIDIA GeForce 940MX

Blender Version
Broken: 3733c52985
Worked: Yes

Repeatedly adding, going into edit mode and deleting cylinder multiple time causes blender to crash.

  • add a cylinder

  • go to edit more

  • go back to object mode

  • repeat this procedure a couple of time and it will eventually lead to a crash

**System Information** Windows 10, Intel(R) Core(TM) i5-6200U CPU @ 2.30GHz, NVIDIA GeForce 940MX **Blender Version** Broken: 3733c529858 Worked: Yes Repeatedly adding, going into edit mode and deleting cylinder multiple time causes blender to crash. - add a cylinder - go to edit more - go back to object mode - repeat this procedure a couple of time and it will eventually lead to a crash
Author

Added subscriber: @Jaye.Antoni_Whyldz

Added subscriber: @Jaye.Antoni_Whyldz

#56746 was marked as duplicate of this issue

#56746 was marked as duplicate of this issue

#56740 was marked as duplicate of this issue

#56740 was marked as duplicate of this issue

#56719 was marked as duplicate of this issue

#56719 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29

Works OK for me, tried to do so at least 30 times… We need an easily reproducible case to investigate.

Works OK for me, tried to do so at least 30 times… We need an easily reproducible case to investigate.

Added subscriber: @a.monti

Added subscriber: @a.monti

This also happens to me, not only with cylinders though, it seems to happen with any kind of primitive (also lamps, curves, ecc), and also without the need of toggling edit mode.

The way to reproduce the crash for me is:

  • add primitive
  • delete it
  • add another primitive
  • delete it
  • repeat until the crash happens

Sometimes it occurs even on the first iteration, more often on the 2nd or the 3rd one.

(I'm on Windows 8.1 64 bit, Intel i7 4700MQ, GT 740M)

This also happens to me, not only with cylinders though, it seems to happen with any kind of primitive (also lamps, curves, ecc), and also without the need of toggling edit mode. The way to reproduce the crash for me is: - add primitive - delete it - add another primitive - delete it - repeat until the crash happens Sometimes it occurs even on the first iteration, more often on the 2nd or the 3rd one. (I'm on Windows 8.1 64 bit, Intel i7 4700MQ, GT 740M)

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo

Same issue as #56719 then I bet, will merge. And looks like we need some dev to check that on windows, @LazyDodo maybe?

Same issue as #56719 then I bet, will merge. And looks like we need some dev to check that on windows, @LazyDodo maybe?

Added subscriber: @Roci

Added subscriber: @Roci

Added subscriber: @antoniov

Added subscriber: @antoniov

I got a crash after adding/delete several times

I just compiled the last source code.

Here the log: P780

The error in in line 687 of layer.c: int object_restrict = base->object->restrictflag;

The value of object variable is invalid.

Looking at the debug, the variable cob->ob is right, but the base that you get in BLI_ghash_lookup() has an invalid object value.

I got a crash after adding/delete several times I just compiled the last source code. Here the log: [P780](https://archive.blender.org/developer/P780.txt) The error in in line 687 of layer.c: int object_restrict = base->object->restrictflag; The value of object variable is invalid. Looking at the debug, the variable cob->ob is right, but the base that you get in BLI_ghash_lookup() has an invalid object value.

image.png

![image.png](https://archive.blender.org/developer/F4630710/image.png)

Added subscriber: @Aiduss

Added subscriber: @Aiduss
Brecht Van Lommel self-assigned this 2018-09-10 15:01:46 +02:00

This issue was referenced by d483dfd03d

This issue was referenced by d483dfd03db1afd660fd4d9d082694d9587d4e0b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @david.hillard

Added subscriber: @david.hillard
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56717
No description provided.