Fix T56717: crash removing/adding objects.

Object bases hash always needs to be freed on library remapping.